# Axum_study

./: Cargo.toml
src/: ctx.rs  error.rs  main.rs
src/model/: mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
src/web/mw_auth/: mod.rs
tests/: quick_dev.rs
